<resources>
    <string name="app_name">DoeSimples</string>
    <string name="usuario">Usuário</string>
    <string name="senha">Senha</string>
    <string name="welcome_string">Bem Vindo ao Doe Simples</string>
    <string name="login">Login</string>
    <string name="text_lista_inst_oi">Olá!</string>
    <string name="action_buscar">Buscar</string>
    <string name="action_atualizar">Atualizar</string>
    <string name="action_config">Configurações</string>
    <string name="action_sair">Sair</string>
    <string name="navigation_drawer_open">Abrir</string>
    <string name="navigation_drawer_close">Fechar</string>
    <string name="pipas_foi_f">Pipas foi fundada em 2018 na cidade São Paulo por cinco alunos da Faculdade Impacta de Tecnologia. Nossa missão é fazer a comunicação entre doadores e instituições de caridade, visando facilitar o gerenciamento e a comunicação das instituições com possíveis doadores.</string>
    <string name="nossa_equip">NOSSA EQUIPE</string>
    <string name="members"></string>
    <string name="ajudando_in">Ajudando instituições a garantirem um futuro melhor para as crianças que mais precisam dele.</string>
    <string name="como_eu_pos">Como eu posso ajudar?</string>
    <string name="nome">Nome</string>
    <string name="telefone">Telefone</string>
    <string name="instituicao">Instituição</string>
    <string name="tipo">Tipo de Doação</string>
    <string name="doacao">Doação</string>
    <string name="Cadastrar">Cadastrar</string>
</resources>
