<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_buscar"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/action_buscar"
        app:showAsAction="collapseActionView|ifRoom"
        app:actionViewClass="android.widget.SearchView" />

    <item android:id="@+id/action_atualizar"
        android:title="@string/action_atualizar"
        android:icon="@drawable/ic_atualizar_white"
        app:showAsAction="ifRoom"
        />

    <item android:id="@+id/action_config"
        android:title="@string/action_config"
        app:showAsAction="never"
        />

    <item android:id="@+id/action_exit"
        android:title="@string/action_sair"
        app:showAsAction="never"
        />

</menu>