<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@color/colorPrimaryDark"
        />

    <TextView
        android:id="@+id/text_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/welcome_string"
        android:textSize="20sp"
        android:textStyle="bold" />


    <ImageView
        android:id="@+id/campo_imagem"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_gravity="center"/>


    <EditText
        android:id="@+id/editUser"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/round_et"
        android:gravity="center"
        android:hint="@string/usuario"
        android:textColor="@color/colorText"
        android:textColorHint="@color/colorDarkGray"
        android:singleLine='true'/>

    <EditText
        android:id="@+id/editPassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/round_et"
        android:gravity="center"
        android:hint="@string/senha"
        android:textColor="@color/colorText"
        android:textColorHint="@color/colorDarkGray"
        android:singleLine='true'
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="@drawable/round_btn"
        android:padding="20dp"
        android:text="@string/login"
        android:textAllCaps="true"
        android:textColor="@color/colorLightGray"
        android:textSize="20sp" />

</LinearLayout>

