<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/CadastrarInstituicao"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/toolbar" />

        <EditText
            android:id="@+id/id"
            android:visibility="gone"
            android:layout_height="0dp"
            android:layout_width="0dp"/>

        <EditText
            android:id="@+id/nome"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/round_et"
            android:gravity="center"
            android:hint="@string/nome"
            android:textColor="@color/colorText"
            android:textColorHint="@color/colorDarkGray"
            android:singleLine='true'/>
        <EditText
            android:id="@+id/telefone"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/round_et"
            android:gravity="center"
            android:hint="@string/telefone"
            android:textColor="@color/colorText"
            android:textColorHint="@color/colorDarkGray"
            android:singleLine='true'/>
        <Spinner
            android:id="@+id/listinstituicao"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/round_et"
            android:gravity="center"
            android:hint="@string/instituicao"
            android:textColor="@color/colorText"
            android:textColorHint="@color/colorDarkGray"
            android:singleLine='true'
            android:spinnerMode="dialog"/>
        <Spinner
            android:id="@+id/listTipo"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/round_et"
            android:gravity="center"
            android:hint="@string/tipo"
            android:textColor="@color/colorText"
            android:textColorHint="@color/colorDarkGray"
            android:singleLine='true'
            android:spinnerMode="dialog"
            />

        <EditText
            android:id="@+id/doacao"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/round_et"
            android:gravity="center"
            android:hint="@string/doacao"
            android:textColor="@color/colorText"
            android:textColorHint="@color/colorDarkGray"
            android:singleLine='true'/>

        <Button
            android:id="@+id/buttonCad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="@drawable/round_btn"
            android:padding="20dp"
            android:text="@string/Cadastrar"
            android:textAllCaps="true"
            android:textColor="@color/colorLightGray"
            android:textSize="20sp"
            />
    </LinearLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/menu_lateral_cadastrar_instituicao"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/menu_lateral_cabecalho"
        app:menu="@menu/menu_lateral" />
</android.support.v4.widget.DrawerLayout>